style fix z-index Card image;

--- a/minstrelflix/src/components/Card/Card.css
+++ b/minstrelflix/src/components/Card/Card.css
@@ -7,26 +7,33 @@
     text-shadow: 2px 2px 4px black;
 
     overflow: hidden;
-    max-width: 30%;
-    min-width: 300px;
-    min-height: 450px;
-}
 
-.movie h2,
-.movie h3 {
-    z-index: 2;
+    width: 300px;
+    min-height: 450px;
 }
 
 .movie__img {
     position: absolute;
     left: 0;
     top: 0;
-    z-index: 0;
-    /* pointer-events: none; */
+    z-index: -1;
 
     background: center / cover no-repeat;
     filter: grayscale(50%);
 
     width: 300px;
     height: 450px;
+}
+
+.movie-text__sect{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: end;
+    background-color: #12121230;
+}
+
+.movie__title {
+    font-size: 1.2rem;
+    word-break: break-word;
 }
